fixing width toolbar view mobile,align btn navbar to right in toolbar and fix hover action link

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -120,7 +120,6 @@
 	}
 	#toolbar,#menu{ 
 		vertical-align: top;
-		width: 37%;
 		margin-left: 0;
 		.navbar{
 			margin-bottom: 0;
@@ -130,7 +129,6 @@
 			border-right: 1px solid @btnPrimaryColor;
 			border-bottom: none;
 			border-top: none;
-			float: left;
 			margin: 0;
 			min-height: 80px;
 			width: 80px;
@@ -210,6 +208,17 @@
 					display: block;
 				}
 			}
+		}
+	}
+	#toolbar{
+		.btn-navbar{
+			float: right;
+		}
+	}
+	#menu{
+		width: 37%;
+		.btn-navbar{
+			float: left;
 		}
 	}
 	.navbar-inner {
@@ -342,7 +351,15 @@
 	}
 	.nav-collapse .nav>li>a, .nav-collapse .dropdown-menu a{
 		font-weight: normal;
+		&.action{
+			.border-radius(0 0 0 0);
+			color: @color_five;
+			&:hover{
+				color:@navbarLinkColorHover;
+			}
+		}
 	}
+
 }
 @media (min-width: 768px) and (max-width: 979px) {
   /* Adjust sidenav width */
@@ -433,12 +450,6 @@
 		}
 		#main-content{
 			.box-sizing(border-box);
-		}
-		#header{
-			.navbar-inner{
-				padding-left: 20px !important;
-				padding-right: 20px !important;
-			}
 		}
 		&.sb1 {
 			#sidebar1:first-child {
